Fix: time slider text overflow

--- a/web_server/style.css
+++ b/web_server/style.css
@@ -68,7 +68,8 @@ input[type=range]::-webkit-slider-thumb:active {
 
 .form_control_container__time__input {
   color: #8a8383;
-  width: 50px;
+  min-width: 60px;
+  width: auto;
   height: 30px;
   font-size: 20px;
   border: none;
